--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "webpack:compile": "webpack --display-error-details",
     "compile-sass-theme": "sass src/assets/primeng-brt/theme.scss src/assets/primeng-brt/theme.css",
     "start:web": "webpack-dev-server --content-base . --port 4200 --inline",
-    "build:electron:main": "tsc electron.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod && cd ..",
+    "build:electron:main": "tsc electron.ts --outDir dist && copyfiles package.json dist && cd dist && npm install --prod --legacy-peer-deps && cd ..",
     "build": "webpack --display-error-details && npm run build:electron:main",
     "build:prod": "cross-env NODE_ENV=production npm run build",
     "electron:serve": "npm run build:electron:main && electron ./dist --serve",
@@ -59,6 +59,8 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "5.2.11",
+    "@brtnetwork/brt-lib": "^1.0.12",
+    "@types/node": "^14.14.33",
     "angular2-logger": "^0.7.0",
     "angular2-qrcode": "^2.0.1",
     "angular2-uuid": "1.1.1",
@@ -66,14 +68,19 @@
     "big-integer": "^1.6.34",
     "big.js": "^5.0.3",
     "bufferutil": "^4.0.1",
-    "brt-libjs": "^1.0.12",
     "core-js": "2.4.1",
+    "electron-installer-debian": "^0.7.1",
+    "electron-installer-dmg": "^0.2.1",
+    "electron-installer-redhat": "^0.5.0",
+    "electron-installer-zip": "^0.1.2",
     "electron-is-dev": "^0.3.0",
+    "electron-linux-installer": "^0.2.2-beta",
     "electron-notification-desktop": "0.0.4",
     "electron-osx-sign": "^0.4.10",
     "electron-squirrel-startup": "^1.0.0",
     "enhanced-resolve": "3.3.0",
     "font-awesome": "^4.7.0",
+    "fs-xattr": "^0.3.0",
     "fsync": "0.0.0",
     "lokijs": "1.5.5",
     "lz-string": "^1.4.4",
@@ -94,7 +101,7 @@
     "@angular/cli": "1.6.0",
     "@angular/compiler-cli": "5.2.11",
     "@ngtools/webpack": "^1.10.2",
-    "@types/jasmine": "2.5.54",
+    "@types/jasmine": "^2.5.54",
     "autoprefixer": "7.1.4",
     "awesome-typescript-loader": "^5.2.0",
     "codelyzer": "3.2.0",
@@ -103,7 +110,7 @@
     "css-loader": "0.28.7",
     "css-to-string-loader": "^0.1.3",
     "cssnano": "3.10.0",
-    "electron": "2.0.18",
+    "electron": "^5.0.13",
     "electron-builder": "^20.28.4",
     "electron-builder-squirrel-windows": "^20.28.3",
     "electron-packager": "12.1.2",
@@ -144,7 +151,7 @@
     "ts-node": "3.3.0",
     "tslint": "5.7.0",
     "tslint-loader": "^3.6.0",
-    "typescript": "^2.6.2",
+    "typescript": "^3.9.9",
     "url-loader": "0.5.9",
     "webdriver-manager": "12.0.6",
     "webpack": "3.8.1",
@@ -152,11 +159,11 @@
     "webpack-dev-server": "2.9.2"
   },
   "optionalDependencies": {
-    "electron-linux-installer": "^0.2.2-beta",
-    "electron-installer-dmg": "^0.2.1",
-    "electron-installer-zip": "^0.1.2",
     "electron-installer-debian": "^0.7.1",
-    "electron-installer-redhat": "^0.5.0"
+    "electron-installer-dmg": "^0.2.1",
+    "electron-installer-redhat": "^0.5.0",
+    "electron-installer-zip": "^0.1.2",
+    "electron-linux-installer": "^0.2.2-beta"
   },
   "license": "SEE LICENSE IN LICENSE.md"
 }
