--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "BRT Desktop Wallet",
   "homepage": "https://github.com/BRTNetwork/brt-wallet",
   "author": {
-    "name": "brt Foundation",
+    "name": "BRT Network",
     "email": "info@brt.org"
   },
   "keywords": [
@@ -60,7 +60,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@angular/router": "5.2.11",
     "@brtnetwork/brt-lib": "^1.0.12",
-    "@types/node": "^14.14.33",
+    "@types/node": "^10.17.55",
     "angular2-logger": "^0.7.0",
     "angular2-qrcode": "^2.0.1",
     "angular2-uuid": "1.1.1",
