--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "postcss-url": "7.1.2",
     "protractor": "5.1.2",
     "raw-loader": "0.5.1",
+    "sass": "^1.32.8",
     "sass-loader": "6.0.6",
     "script-loader": "0.7.1",
     "source-map-loader": "0.2.3",
