--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "electron": "^5.0.13",
     "electron-builder": "^20.28.4",
     "electron-builder-squirrel-windows": "^20.28.3",
-    "electron-packager": "12.1.2",
+    "electron-packager": "^15.2.0",
     "electron-reload": "1.2.5",
     "electron-winstaller": "^2.6.4",
     "exports-loader": "0.6.4",
