Fix domain name and add links to socials

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/BRTNetwork/brt-wallet",
   "author": {
     "name": "BRT Network",
-    "email": "info@brt.org"
+    "email": "info@brt.network"
   },
   "keywords": [
     "brt",
